<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">通讯</string>
    
    <!-- Auth -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="nickname">昵称</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="login_failed">登录失败</string>
    <string name="register_failed">注册失败</string>
    <string name="invalid_phone">手机号格式不正确</string>
    <string name="invalid_password">密码长度至少6位</string>
    <string name="password_mismatch">两次密码不一致</string>
    
    <!-- Main -->
    <string name="messages">消息</string>
    <string name="contacts">联系人</string>
    <string name="discover">发现</string>
    <string name="me">我</string>
    <string name="search">搜索</string>
    <string name="no_conversations">暂无会话</string>
    <string name="no_friends">暂无好友</string>
    
    <!-- Discover -->
    <string name="moments">朋友圈</string>
    <string name="mini_games">小游戏</string>
    <string name="icon">图标</string>
    <string name="arrow">箭头</string>
    
    <!-- Chat -->
    <string name="send">发送</string>
    <string name="input_message">输入消息...</string>
    <string name="message_sending">发送中</string>
    <string name="message_sent">已发送</string>
    <string name="message_failed">发送失败</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="recall">撤回</string>
    <string name="recall_message">撤回了一条消息</string>
    
    <!-- Friend -->
    <string name="add_friend">添加好友</string>
    <string name="friend_request">好友请求</string>
    <string name="accept">接受</string>
    <string name="reject">拒绝</string>
    <string name="new_friend">新的朋友</string>
    <string name="search_by_id">通过ID搜索</string>
    <string name="search_by_phone">通过手机号搜索</string>
    
    <!-- Common -->
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="loading">加载中...</string>
    <string name="error">错误</string>
    <string name="retry">重试</string>
    <string name="save">保存</string>
    <string name="settings">设置</string>
    <string name="avatar">头像</string>
    <string name="muted_icon">免打扰</string>
    <string name="add">添加</string>
</resources>

